<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">djackAD340</string>
    <string name="nameDate">Jack, Daniel 04/16/2020</string>


    <!--Form Fields-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="age">Age</string>
    <string name="occupation">Occupation</string>
    <string name="location">Location (e.g. Seattle, WA)</string>
    <string name="description">Describe yourself a bit</string>

    <!--Form Validation Error Messages-->
    <string name="err_enter_name">Enter your full name</string>
    <string name="err_enter_email">Enter a valid email</string>
    <string name="err_enter_occ">Enter your occupation</string>
    <string name="err_enter_dob_young">Must be 18 to sign up</string>
    <string name="err_enter_dob_invalid">Select a valid age</string>
    <string name="err_enter_desc">Describe yourself!</string>
    <string name="err_enter_loc">Enter your location</string>


    <string name="profile_desc">About me:</string>
    <string name="date_picker_tag">date picker</string>
    <string name="time_picker_tag">time picker</string>

    <!--Form/Profile Buttons-->
    <string name="submit">Submit</string>
    <string name="new_sign_up">New Sign Up</string>
    <string name="sign_up">Sign Up for GreatDate</string>
    <string name="about_me">About me…</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="ellipses">"…"</string>
    <string name="add_photo_text">Add Photo</string>
    <string name="profile_picture_thumbnail">Profile picture thumbnail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matches_placeholder">This is where matches will go</string>
    <string name="settings_placeholder">This is where settings will go</string>
    <string name="s">s</string>
    <string name="sadas">Enter your full name</string>
    <string name="image_of_match">Image of match</string>
    <string name="favorite_button">Favorite button</string>
    <string name="unliked">unliked</string>
    <string name="you_unliked">"You unliked "</string>
    <string name="you_liked">"You liked "</string>
    <string name="exclamation_mark">!</string>
    <string name="switch_public">"Public "</string>
    <string name="switch_private">Private</string>
    <string name="match_gender">Match Gender:</string>
    <string name="match_gender_tag">matchGender</string>
    <string name="_00_00">00:00</string>
    <string name="match_reminder_hint">Click to set time</string>
    <string name="match_age_range">Match Age Range:</string>
    <string name="match_distance_miles">Match Distance (mi):</string>
    <string name="daily_match_reminder">Daily Match Reminder:</string>
    <string name="match_distance_tag">matchDistance</string>
    <string name="private_account">Private Account:</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="min_age_toast">Min age must be between 18 and 99</string>
    <string name="max_age_toast">Max age must be between 18 and 99</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your location is off, turn it on please</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="gps_provider_started">GPS provider started</string>
</resources>
