<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/match_reminder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_72"
        android:text="@string/daily_match_reminder"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/max_distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/match_distance_miles"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="@+id/match_reminder_text"
        app:layout_constraintTop_toBottomOf="@+id/match_reminder_text" />

    <EditText
        android:id="@+id/match_reminder_value"
        android:layout_width="@dimen/dp_95"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:autofillHints="@string/match_reminder_hint"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/_00_00"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/match_reminder_text"
        app:layout_constraintStart_toEndOf="@+id/match_reminder_text"
        app:layout_constraintTop_toTopOf="@+id/match_reminder_text" />

    <TextView
        android:id="@+id/gender_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/match_gender"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="@+id/max_distance_text"
        app:layout_constraintTop_toBottomOf="@+id/max_distance_text" />

    <TextView
        android:id="@+id/account_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/private_account"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="@+id/gender_text"
        app:layout_constraintTop_toBottomOf="@+id/gender_text" />

    <TextView
        android:id="@+id/age_range_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/match_age_range"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="@+id/account_type_text"
        app:layout_constraintTop_toBottomOf="@+id/account_type_text" />

    <Spinner
        android:id="@+id/distance_spinner"
        android:layout_width="@dimen/dp_95"
        android:layout_height="wrap_content"
        android:tag="@string/match_distance_tag"
        app:layout_constraintBottom_toBottomOf="@+id/max_distance_text"
        app:layout_constraintStart_toStartOf="@+id/match_reminder_value"
        app:layout_constraintTop_toTopOf="@+id/max_distance_text" />

    <Switch
        android:id="@+id/account_type_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="@string/match_gender_tag"
        app:layout_constraintBottom_toBottomOf="@+id/account_type_text"
        app:layout_constraintStart_toStartOf="@+id/gender_spinner"
        app:layout_constraintTop_toTopOf="@+id/account_type_text" />

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="@dimen/dp_120"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/gender_text"
        app:layout_constraintStart_toStartOf="@+id/distance_spinner"
        app:layout_constraintTop_toTopOf="@+id/gender_text" />

    <EditText
        android:id="@+id/min_age"
        android:layout_width="@dimen/dp_40"
        android:layout_height="wrap_content"
        android:autofillHints="@string/min"
        android:ems="10"
        android:hint="@string/min"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/age_range_text"
        app:layout_constraintStart_toStartOf="@+id/account_type_switch"
        app:layout_constraintTop_toTopOf="@+id/age_range_text" />

    <EditText
        android:id="@+id/max_age"
        android:layout_width="@dimen/dp_40"
        android:layout_height="wrap_content"
        android:autofillHints="@string/max"
        android:ems="10"
        android:hint="@string/max"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/min_age"
        app:layout_constraintTop_toTopOf="@+id/min_age" />

</androidx.constraintlayout.widget.ConstraintLayout>